...
                android:layout_weight="2.62"
                android:background="#817474"
                android:src="@drawable/cross" />


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/diagnosis_card_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
...
                        android:layout_alignParentTop="true"
                        android:text="@string/diagnosis_card_title"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/diagnosis_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/diagnosis_title"
                        android:layout_marginTop="10dp"
                        android:text="@string/diagnosis_card_preview_text" />
                </RelativeLayout>
...
